--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@ulb-darmstadt/photogrammetry-viewer",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "type": "module",
   "main": "dist/photogrammetry-viewer.js",
   "module": "dist/photogrammetry-viewer.js",
-  "types": "dist/photogrammetry-viewer.d.ts",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/photogrammetry-viewer.js",
