--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/three": "^0.169.0",
     "typescript": "^5.0.2",
     "vite": "^5.4.10",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "vite-plugin-dts": "^4.3.0"
   }
 }
