--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && vite build -c vite.config.without-modelviewer.ts",
     "test": "echo \"no tests specified\" && exit 0",
     "preview": "vite preview",
     "prepare": "npm run build"
